Minor adjustments in html file, beginning to set structure for styling league list dropdowns. Updated chart.js code in order for the graphs to be more visible on smaller devices. Attempted to fix league list dropdown logic to remove option for users to select same league in both dropdowns (yet to be done). Adjusted some styling to information section based on the different mobile views I inspected on the webpage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ body {
 }
 
 .info-box {
-    width: 1100px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -184,6 +184,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     min-height: 100vh;
+    width: 100vw;
     justify-content: center;
     display: flex;
     align-items: center;
@@ -192,9 +193,9 @@ body {
 }
 
 #games-chart-1 {
-    float: left;
+    position: relative
 }
 
 #games-chart-2 {
-    float: right;
+    position: relative
 }
